services/simple_app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app
  namespace: simple-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-app
  template:
    metadata:
      labels:
        app: simple-app
    spec:
      containers:
      - name: simple-app
        image: container-registry.lab.ln:5000/simple-app:1.0
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        # Uncomment to enable persistent storage for /app/data.db
        volumeMounts:
         - name: simple-app-data
           mountPath: /app
      # Uncomment to enable persistent storage for /app/data.db
      volumes:
      - name: simple-app-data
        persistentVolumeClaim:
          claimName: simple-app-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: simple-app-service
  namespace: simple-app
spec:
  selector:
    app: simple-app
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
